# go-kms

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  go.mod  main.go
.github/workflows/: android-apk.yml  bench.yml  ci.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/xmdhs/gokms/: DeviceAddressProvider.kt  GoKmsArgs.kt  LogBuffer.kt  (+4 more)
android/app/src/main/res/drawable/: ic_launcher.xml  ic_notification.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
benches/: crypto_bench.rs
client/: client.go  client_bench_test.go
crypto/: aes.go  aes_amd64.go  aes_arm64.go  aes_asm.go  aes_bench_test.go  aes_noasm.go  aes_test.go
kms/: base.go  bench_test.go  filetimes.go  versions.go
logger/: logger.go
reference/: build.bat  go.mod  main.go
reference/client/: client.go
reference/cmd/genvectors/: main.go
reference/crypto/: aes.go  aes_amd64.s  aes_arm64.s  exports_for_vectors.go
reference/kms/: base.go  bench_test.go  exports_for_vectors.go  versions.go
reference/logger/: logger.go
reference/server/: server.go  server_bench_test.go
rpc/: rpc.go  rpc_bench_test.go
server/: server.go  server_bench_test.go
src/: client.rs  lib.rs  logger.rs  main.rs  rpc.rs  server.rs
src/crypto/: aes.rs  aes_hw.rs  kms_aes.rs  mod.rs  v4_hash.rs  v6_mac.rs
src/kms/: base.rs  filetime.rs  mod.rs  utf16.rs  uuid.rs  versions.rs
tests/: crypto_unit.rs  e2e.rs  kms_unit.rs  parity.rs  rpc_unit.rs
